added layouts compute function and example. still a wrok in progress...

--- a/pyAM4.ipynb
+++ b/pyAM4.ipynb
@@ -43,6 +43,12 @@
     "        # convert nml to dict; save dict as class member; if json_out is not None,\n",
     "        # export json to json_out\n",
     "        #\n",
+    "        # NOTE: The format for .nml does not appear to be very strictly defined. Basically, it is not\n",
+    "        #. well defined if key-value pairs are separated by CRLF ('\\n') or comma ',' -- oh, and also commas\n",
+    "        #. are allowed (in some cases) withink values. So this might be a work in progress, to be able\n",
+    "        #. to generally define k-v pairs. Right now, its success rests a little bit on, \"please, all that\n",
+    "        #. is holy, let them not allow this or that...\"\n",
+    "        #\n",
     "        # @nml_in: filenname of input nml\n",
     "        # @json_out: filename of output json file.\n",
     "        #. \n",
@@ -116,60 +122,8 @@
     "            #\n",
     "        #\n",
     "        return nml_dict\n",
-    "    def nml_to_json_depricated(self, nml_in=None, json_out=None):\n",
-    "        '''\n",
-    "        # convert nml to dict; save dict as class member; if json_out is not None,\n",
-    "        # export json to json_out\n",
-    "        #\n",
-    "        # @nml_in: filenname of input nml\n",
-    "        # @json_out: filename of output json file.\n",
-    "        #. \n",
-    "        '''\n",
-    "        #\n",
-    "        if nml_in is None:\n",
-    "            nml_in = self.nml\n",
-    "        #\n",
-    "        nml_dict = {}\n",
-    "        group_name = ''\n",
-    "        #k_group = 0\n",
-    "        #\n",
-    "        value_out = ''\n",
-    "        ky = ''\n",
-    "        with open(nml_in) as fin:\n",
-    "            for rw in fin:\n",
-    "                rw = rw.strip().split()\n",
-    "                #\n",
-    "                if len(rw)==0 or rw[0] in ['/', '\\n', '!']:\n",
-    "                    continue\n",
-    "                #\n",
-    "                if rw[0]=='&':\n",
-    "                    # new group:\n",
-    "                    #group_name = rw[1:].replace('\\n', '')\n",
-    "                    group_name = rw[1:].strip()\n",
-    "                    if not group_name in nml_dict.keys():\n",
-    "                        nml_dict[group_name]={}\n",
-    "                    continue\n",
-    "                    #\n",
-    "                #\n",
-    "                #print('** ', rw)\n",
-    "                if '=' in rw:\n",
-    "                    if ky != '':\n",
-    "                        nml_dict[group_name][ky] = value_out\n",
-    "                        #\n",
-    "                    ky,value_out =(s.strip() for s in rw.split('='))\n",
-    "                    #\n",
-    "                else:\n",
-    "                    value_out = value_out + rw.strip()\n",
-    "            #\n",
-    "        #\n",
-    "        self.nml_dict=nml_dict\n",
-    "        #\n",
-    "        if not json_out is None:\n",
-    "            with open(json_out, 'w') as fout:\n",
-    "                json.dump(nml_dict, fout)\n",
-    "            #\n",
-    "        #\n",
-    "        return nml_dict\n",
+    "    #\n",
+    "    \n",
     "    #\n",
     "    def json_to_nml(self, json_in=None, nml_out='input.nml', indent=None):\n",
     "        '''\n",
@@ -231,36 +185,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "JJ = NML_from_nml('input_yoder_v101.nml')\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "*** coupler_nml:{'force_donner_moist_conserv': '.false.,', 'months': '1,', 'days': '0,', 'current_date': '1979,1,1,0,0,0,', 'calendar': \"'julian'\", 'dt_atmos': '1800,', 'dt_cpld': '7200,', 'use_lag_fluxes': '.true.', 'concurrent': '.false.', 'do_ocean': '.false.', 'ocean_npes': '0', 'atmos_npes': '48', 'atmos_nthreads': '1', 'use_hyper_thread': '.false.'}\n",
-      "\n",
-      "*** coupler_nml:{'force_donner_moist_conserv': '.false.,', 'months': '1,', 'days': '0,', 'current_date': '1979,1,1,0,0,0,', 'calendar': \"'julian'\", 'dt_atmos': '1800,', 'dt_cpld': '7200,', 'use_lag_fluxes': '.true.', 'concurrent': '.false.', 'do_ocean': '.false.', 'ocean_npes': '0', 'atmos_npes': '48', 'atmos_nthreads': '1', 'use_hyper_thread': '.false.'}\n",
-      "\n",
-      "*** vegn_data_nml:{'nom_ratio': '0.7', 'vegn_to_use': \"'uniform'\", 'K1': '10,', 'K2': '0.1,', 'fsc_liv': '0.9,', 'fsc_wood': '0.45,', 'c1(4)': '0.3', 'c2(4)': '0.3', 'Vmax': '2.0E-5, 2.0E-5, 2.0E-5, 2.0E-5, 1.50E-5,', 'm_cond': '4., 9., 9., 7., 7.,', 'alpha_phot': '0.05, 0.06, 0.06, 0.06, 0.06,', 'gamma_resp': '0.03, 0.02, 0.02, 0.02, 0.02,', 'tc_crit(0:2)': '3*273.16', 'fact_crit_phen(0:4)': '0., 0., 0., 0., 0.', 'fact_crit_fire(0:4)': '0., 0., 0., 0., 0.', 'cnst_crit_phen(0:4)': '0.30, 0.15, 0.15, 0.30, 0.30', 'cnst_crit_fire(0:4)': '0.15,  0.40, 0.15, 0.15, 0.15', 'wet_leaf_dreg(0:4)': '.3, .3, .3, .3, .3', 'ksi': '0, 0, 0, 0, 0,', 'leaf_refl(0:4,1)': '0.11, 0.11, 0.10, 0.10, 0.10', 'leaf_refl(0:4,2)': '0.58, 0.58, 0.45, 0.45, 0.39,', 'dat_root_zeta(0:4)': '0.35212, 0.17039, 0.28909, 0.25813, 0.17039', 'critical_root_density': '0.0,', 'tau_drip_s': '259200.0', 'cmc_lai(0:4)': '0.02, 0.02, 0.02, 0.02, 0.02', 'csc_lai(0:4)': '0.30, 0.30, 0.30, 0.30, 0.60', 'dat_snow_crit': '4*1.e7, .1', 't_transp_min': '268.', 'srl(0:1)': '112.0e3, 150.0e3', 'root_perm': '14*5e-7', 'alpha(1,3)': '4', 'leaf_age_tau(2)': '150', 'smoke_fraction': '0.9, 0.9, 0.6, 0.6, 0.6', 'tg_c3_thresh': '1', 'phen_ev1': '0.2', 'phen_ev2': '0.7', 'cmc_eps': '0.01', 'alpha(0:4,6)': '0.0, 0.0, 0.012, 0.012, 0.012'}\n",
-      "\n",
-      "*** simple_sulfate_nml:{'time_varying_solar_constant': '.true.,', 'gas_conc_filename': \"'gas_conc_3D_am3p9.nc'\", 'gas_conc_time_dependency_type': \"'constant'\", 'cont_volc_source': \"'do_cont_volc'\", 'expl_volc_source': \"'do_expl_volc'\", 'aerocom_emission_filename': \"'so2_0.25_volcanoes.nc'\", 'aircraft_source': \"'do_aircraft',\", 'aircraft_filename': \"'emissions.aircraft.aero.0.5x0.5.1849-2016.nc',\", 'aircraft_emission_name(1)': \"'fuel'\", 'aircraft_time_dependency_type': \"'time_varying'\", 'aircraft_dataset_entry': '1979 1 1 0 0 0', 'so2_aircraft_EI': '0.001', 'anthro_source': \"'do_anthro',\", 'anthro_emission_name(1)': \"'so2ff',\", 'anthro_emission_name(2)': \"'so4ff',\", 'anthro_time_dependency_type': \"'time_varying'\", 'anthro_dataset_entry': '1979 1 1 0 0 0', 'anthro_filename': \"'anthro_so2.1849_2016.nc',\", 'biobur_source': \"'do_biobur',\", 'biobur_emission_name(1)': \"'so2bb',\", 'biobur_emission_name(2)': \"'so4bb',\", 'biobur_time_dependency_type': \"'time_varying'\", 'biobur_dataset_entry': '1979 1 1 0 0 0', 'biobur_filename': \"'anthro_so2.1849_2016.nc',\", 'cloud_chem_solver': '\"f1p\"', 'pH_cloud': '4.5'}\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
+    "NML_test = NML_from_nml('input_yoder_v101.nml')\n",
+    "#\n",
+    "\n",
     "# for ky,vl in JJ.nml_dict.items():\n",
     "#     print('** {}: {}'.format(ky,vl))\n",
     "\n",
     "\n",
     "for ky in ['coupler_nml','coupler_nml', 'vegn_data_nml', 'simple_sulfate_nml' ]:\n",
-    "    print('*** {}:{}\\n'.format(ky, JJ.nml_dict[ky]))"
+    "    print('*** {}:{}\\n'.format(ky, NML_test.nml_dict[ky]))"
    ]
   },
   {
@@ -278,6 +211,95 @@
    ],
    "source": [
     "print(JJ.nml_dict['aerosolrad_package_nml']['sulfate_indices'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Working NML example.\n",
+    "\n",
+    "- Start with a standard template\n",
+    "- Compute layouts for an MPI configuration\n",
+    "- Modify layout variables (in internal JSON/dict)\n",
+    "- Export working input.nml"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "** Layouts_1:  [[ 6  8]\n",
+      " [ 4 12]\n",
+      " [ 3 16]\n",
+      " [ 2 24]\n",
+      " [ 1 48]]\n",
+      "** Layouts_2:  [[2 4]\n",
+      " [1 8]]\n",
+      "** Layouts_io_1:  [[1 4]\n",
+      " [1 8]]\n",
+      "** Layouts_io_2:  [[1 4]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def get_layouts(n_tasks=24):\n",
+    "    '''\n",
+    "    # compute possible layouts. Include (some) error checking for valid n_tasks?\n",
+    "    '''\n",
+    "    # get all integer factor pairs:\n",
+    "    return numpy.array(sorted([(k,int(n_tasks/k)) for k in range(1, int(numpy.ceil(n_tasks**.5)))\n",
+    "                               if n_tasks%k==0],\n",
+    "                                key = lambda rw: numpy.sum(rw)))\n",
+    "#\n",
+    "def get_io_layouts(layout):\n",
+    "    '''\n",
+    "    # AM4 io_layouts. the second \"y\" term must be an integer factor of the \"y\" term of the input layout.\n",
+    "    #. Don't yet understand the first term, so for now let's limit it to 1.\n",
+    "    '''\n",
+    "    #\n",
+    "    return numpy.array(sorted([(1,int(layout[1]/k)) for k in range(1, int(numpy.ceil(layout[1]**.5)))\n",
+    "                               if layout[1]%k==0], \n",
+    "                              key=lambda rw:numpy.sum(rw)))\n",
+    "        \n",
+    "n_tasks = 48\n",
+    "n_threads = 1\n",
+    "#\n",
+    "layouts_1 = get_layouts(n_tasks)\n",
+    "layouts_2 = get_layouts(n_tasks = n_tasks/6)\n",
+    "#\n",
+    "layout_io_1 = get_io_layouts(layouts_1[0])\n",
+    "layout_io_2 = get_io_layouts(layouts_2[0])\n",
+    "#\n",
+    "print('** Layouts_1: ', layouts_1)\n",
+    "print('** Layouts_2: ', layouts_2)\n",
+    "#\n",
+    "print('** Layouts_io_1: ', layout_io_1)\n",
+    "print('** Layouts_io_2: ', layout_io_2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "**  0\n",
+      "**  3\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('** ', 48%6)\n",
+    "print('** ', 48%5)"
    ]
   },
   {
