a few more mods to pyAM4 notebook. looks like a working script, now move it all to a module file...

--- a/pyAM4.ipynb
+++ b/pyAM4.ipynb
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 257,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,9 +290,9 @@
     "    mpi_execs = {'mpirun':{'exec': 'mpirun', 'ntasks':'--np ', 'cpu_per_task':'-d '},\n",
     "                 'srun':{'exec':'srun', 'ntasks':'--ntasks=', 'cpu_per_task':'--cpus-per-task='}}\n",
     "    #\n",
-    "    HW_configs={\n",
+    "    HPC_configs={\n",
     "    'mazama_hpc':{'cpu_per_node':24, 'cpu_slots':2, 'cpu_make':'intel', 'cpu_gen':'haswell',\n",
-    "                  'mem_per_node':64},\n",
+    "                  'mem_per_node':64, 'modules':['intel/19', 'openmpi_3/', 'gfdl_am4/']},\n",
     "    'sherlock2_hpc':{'cpu_per_node':24, 'cpu_slots':2, 'cpu_make':'intel', 'cpu_gen':'skylake',\n",
     "                     'mem_per_node':192},\n",
     "    'sherlock2_hpc2':{'cpu_per_node':24, 'cpu_slots':2, 'cpu_make':'intel', 'cpu_gen':'skylake',\n",
@@ -306,7 +306,7 @@
     "    def __init__(self, batch_out='am4_batch.sh', work_dir=None, mpi_exec='mpirun',\n",
     "                 input_data_path=None, input_data_tar=None, input_data_url=None,\n",
     "                 nml_template='nml_input_template.nml', modules=None, diag_table_src='diag_table_v101',\n",
-    "                 force_copy_input=0, do_tar=0, hw_config='mazama_hpc',\n",
+    "                 force_copy_input=0, do_tar=0, hpc_config='mazama_hpc',\n",
     "                 npes_atmos=48, nthreads_atmos=1, npes_ocean=0, job_name='AM4_run', sbatch_options_str='',\n",
     "                 copy_timeout=6000):\n",
     "        '''\n",
@@ -338,13 +338,13 @@
     "        #. \n",
     "        '''\n",
     "        #        #\n",
-    "        if isinstance(hw_config, str):\n",
-    "            if hw_config.endswith('.json'):\n",
-    "                hw_config=json.load(hw_config)\n",
+    "        if isinstance(hpc_config, str):\n",
+    "            if hpc_config.endswith('.json'):\n",
+    "                hpc_config=json.load(hpc_config)\n",
     "            else:\n",
-    "                hw_config=self.HW_configs[hw_config]\n",
+    "                hpc_config=self.HPC_configs[hpc_config]\n",
     "            #\n",
-    "        # else hw_config better be a dict of HW configs.\n",
+    "        # else hpc_config better be a dict of HW configs.\n",
     "        #\n",
     "        # \n",
     "        if npes_atmos%6 != 0:\n",
@@ -375,7 +375,10 @@
     "        # TODO: How to handle the nml file? here as part of the batch, or in a wrapper that handles both?\n",
     "        #. or some combination\n",
     "        #\n",
-    "        if modules is None: modules = ['intel/19', 'openmpi_3/', 'gfdl_am4/']\n",
+    "        if modules is None:\n",
+    "            modules = hpc_config.get('modules', ['intel/19', 'openmpi_3/', 'gfdl_am4/'])\n",
+    "            #modules = ['intel/19', 'openmpi_3/', 'gfdl_am4/']\n",
+    "        #\n",
     "        if input_data_path is None:\n",
     "            input_data_path = '{}/data/AM4_run'.format(root_path)\n",
     "        input_data_tar = input_data_tar or os.path.join(root_path, 'data', 'AM4_run.tar.gz')\n",
@@ -383,13 +386,18 @@
     "        if isinstance(mpi_exec, dict):\n",
     "            ky,vl = mpi_exec.items()[0]\n",
     "            #\n",
+    "            # multi-category dict?\n",
     "            if isinstance(vl, dict):\n",
     "                self.mpi_execs.update(mpi_exec)\n",
-    "                mpi_exec = ky\n",
+    "                mpi_exec = vl\n",
     "            else:\n",
-    "                self.mpi_execs[mpi_exec['exec']] = mpi_exec.copy()\n",
-    "                mpi_exec = mpi_exec['exec']\n",
+    "                # single-entry dict; add this full mpi_exec entry to mpi_execs\n",
+    "                ky = mpi_exec['exec']\n",
+    "                self.mpi_execs[ky] = mpi_exec.copy()\n",
     "            #\n",
+    "        else:\n",
+    "            mpi_exec = self.mpi_execs[mpi_exec]\n",
+    "        #\n",
     "        #\n",
     "        # download, untar, copy input data:\n",
     "        \n",
@@ -419,6 +427,12 @@
     "    @property\n",
     "    def ntasks_total(self):\n",
     "        return self.npes_atmos + self.npes_ocean\n",
+    "    @property \n",
+    "    def n_tasks(self):\n",
+    "        return self.ntasks_total\n",
+    "    @property\n",
+    "    def n_threads(self):\n",
+    "        return self.nthreads_atmos\n",
     "    #\n",
     "    #def layout_to_str(self, layout):\n",
     "    #    return '{},{}'.format(*layout)\n",
@@ -443,7 +457,8 @@
     "               'land_model_nml':{'layout':'{},{}'.format(*self.layout_2),\n",
     "                              'io_layout':'{},{}'.format(*self.layout_io_2)},\n",
     "               'ocean_model_nml':{'layout':'{},{}'.format(*self.layout_1),\n",
-    "                              'io_layout':'{},{}'.format(*self.layout_io_1)}\n",
+    "                              'io_layout':'{},{}'.format(*self.layout_io_1)},\n",
+    "                'atmos_model_nml':{'nxblocks':1, 'nyblocks':self.nthreads_atmos}\n",
     "               }\n",
     "    #\n",
     "    def get_input_data(self, work_dir=None, input_dir=None, input_tar=None, input_data_url=None,\n",
@@ -503,14 +518,13 @@
     "            if verbose:\n",
     "                print('*** VERBOSE: copying input data from {} to {}'.format(input_dir, work_dir))\n",
     "            #\n",
-    "            #pass\n",
     "            # Nuke existing workdir? for now, let's not...\n",
     "            # TODO: shutil.copy2() should work for this, but it's being tempermental, maybe about the\n",
     "            #. directory. So for now, let's just subprocess the shell command and revisit later. It could\n",
     "            #. be a versioing problem (subprocess and related libraries are pretty version squirrelie).\n",
     "            #src = input_dir\n",
     "            #dst = work_dir\n",
-    "            # TODO: This just doesn't seem to work very well (maybe there's a recursive option command or \n",
+    "            # TODO: The Python copy options just don't seem to work very well (maybe there's a recursive option command or \n",
     "            #. something to tell it we're copying a directory?). Let's just use a shell command.\n",
     "            #shutil.copy2(input_dir, work_dir)\n",
     "            cp_command = 'cp -rf {}/ {}/'.format(input_dir, work_dir)\n",
@@ -606,7 +620,7 @@
     "        #  focus on a SE3 Mazama build/configuration.\n",
     "        '''\n",
     "        #\n",
-    "        fname_out = fname_out or self.batch_out\n",
+    "        fname_out = fname_out or os.path.join(self.work_dir, self.batch_out)\n",
     "        chdir = chdir or self.work_dir\n",
     "        output_out = output_out or 'AM4_out_%j.out'\n",
     "        output_err = output_err or 'AM4_out_%j.err'\n",
@@ -616,22 +630,23 @@
     "            # This section should be pretty universal:\n",
     "            fout.write('#!/bin/bash\\n#\\n')\n",
     "            #\n",
-    "            fout.write('#SBATCH --ntasks={}'.format(self.n_tasks))\n",
-    "            fout.write('#SBATCVH --ncpus_per_task={}'.format(self.nthreads))\n",
-    "            if not self.jobname is None or self.jobname=='':\n",
-    "                fout.write('#SBATCH --job-name={}'.format(self.jobname))\n",
+    "            fout.write('#SBATCH --ntasks={}\\n'.format(self.n_tasks))\n",
+    "            fout.write('#SBATCVH --ncpus_per_task={}\\n'.format(self.nthreads_atmos))\n",
+    "            if not self.job_name is None or self.job_name=='':\n",
+    "                fout.write('#SBATCH --job-name={}\\n'.format(self.job_name))\n",
     "            #\n",
-    "            fout.write('#SBATCH --chdir={}'.format(chdir) )\n",
-    "            fout.write('#SBATCH --output={}'.format(output_out))\n",
-    "            fout.write('#SBATCH --error={}'.format(output_err))\n",
+    "            fout.write('#SBATCH --chdir={}\\n'.format(chdir) )\n",
+    "            fout.write('#SBATCH --output={}\\n'.format(output_out))\n",
+    "            fout.write('#SBATCH --error={}\\n'.format(output_err))\n",
     "            #\n",
     "            # Module swill be platform dependent. We could handle this section with JSON\n",
     "            #. if we wanted to.\n",
-    "            fout.write('module purge\\n#\\n')\n",
+    "            fout.write('#\\nmodule purge\\n#\\n')\n",
     "            #\n",
     "            for m in self.modules:\n",
     "                fout.write('module load {}\\n'.format(m))\n",
     "            #\n",
+    "            fout.write('#\\n#\\n')\n",
     "            # Universal??? My guess is we can impprove performance by increasing these values on bigger\n",
     "            #. memory machines.\n",
     "            # these probably need to be parameterized somehow, or included in a template... or otherwise\n",
@@ -644,14 +659,15 @@
     "            fout.write('EXECUTABLE=${AM4_GFDL_BIN}/${AM4_GFDL_EXE}\\n')\n",
     "            #\n",
     "            # We can probably make this part pretty universal as well...\n",
-    "            fout.write('ulimit -s unlimited')\n",
-    "            fout.write('MPI_COMMAND={} {}{} {}{} ${EXECUTABLE}'.format(mpi_exec['exec'],\n",
+    "            fout.write('#\\nulimit -s unlimited\\n#\\n')\n",
+    "            fout.write('#\\ncd {}\\n#\\n'.format(self.work_dir))\n",
+    "            fout.write('MPI_COMMAND={} {}{} {}{} ${{EXECUTABLE}}\\n#\\n'.format(mpi_exec['exec'],\n",
     "                                                            mpi_exec['ntasks'], self.n_tasks,\n",
     "                                                            mpi_exec['cpu_per_task'], self.n_threads))\n",
     "            #\n",
     "            # add an error-check:\n",
     "            for ln in ['if [[ %? -ne 0 ]]; then', 'echo \"ERROR: Run failed.\" 1>&2', \n",
-    "                       '\"ERROR: Output from run in {}/fms.out ... or maybe in a log file\" 1>&2'.format(work_dir),\n",
+    "                       '\"ERROR: Output from run in {}/fms.out ... or maybe in a log file\" 1>&2'.format(self.work_dir),\n",
     "                       'exit 1', 'fi' ]:\n",
     "                fout.write('{}\\n'.format(ln))\n",
     "            #\n",
@@ -680,25 +696,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#cp input_yoder_v101.nml nml_input_template.nml"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 258,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "a string with SOME in {$braces}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('a string with {} in {{$braces}}'.format('SOME'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 259,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*** ABS variables:\n",
       "batch_out: am4_batch.sh\n",
       "work_dir: /Users/myoder96/Codes/AM4_runtime/workdir2\n",
-      "mpi_exec: mpirun\n",
+      "mpi_exec: {'exec': 'mpirun', 'ntasks': '--np ', 'cpu_per_task': '-d '}\n",
       "input_data_path: /Users/myoder96/Codes/AM4_data2/AM4_run\n",
       "input_data_tar: /Users/myoder96/Codes/AM4_data2/AM4_run.tar.gz\n",
       "input_data_url: ftp://nomads.gfdl.noaa.gov/users/Ming.Zhao/AM4Documentation/GFDL-AM4.0/inputData/AM4_run.tar.gz\n",
@@ -707,11 +732,11 @@
       "diag_table_src: diag_table_v101\n",
       "force_copy_input: 0\n",
       "do_tar: 0\n",
-      "hw_config: {'cpu_per_node': 24, 'cpu_slots': 2, 'cpu_make': 'intel', 'cpu_gen': 'haswell', 'mem_per_node': 64}\n",
+      "hpc_config: {'cpu_per_node': 24, 'cpu_slots': 2, 'cpu_make': 'intel', 'cpu_gen': 'haswell', 'mem_per_node': 64, 'modules': ['intel/19', 'openmpi_3/', 'gfdl_am4/']}\n",
       "npes_atmos: 48\n",
       "nthreads_atmos: 1\n",
       "npes_ocean: 0\n",
-      "job_name: AM4_run\n",
+      "job_name: AM4_dev\n",
       "sbatch_options_str: \n",
       "copy_timeout: 6000\n",
       "cwd: /Users/myoder96/Codes/AM4_runtime\n",
@@ -721,68 +746,81 @@
       "layout_io_1: [1 4]\n",
       "layout_2: [2 4]\n",
       "layout_io_2: [1 4]\n",
-      "self: <__main__.AM4_batch_scripter object at 0x7fae21f8ed68>\n"
-     ]
-    }
-   ],
-   "source": [
-    "ABS = AM4_batch_scripter(input_data_path='/Users/myoder96/Codes/AM4_data2/AM4_run', \n",
-    "                         work_dir='/Users/myoder96/Codes/AM4_runtime/workdir2')\n",
-    "for key,val in ABS.__dict__.items():\n",
-    "    print('{}: {}'.format(key,val))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 166,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "self: <__main__.AM4_batch_scripter object at 0x7fae22014a20>\n",
       "*** DEBUG: os.path.isdir(os.path.join(work_dir, 'INPUT'))=True\n"
      ]
     }
    ],
    "source": [
-    "zz = ABS.get_input_data(verbose=True)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 167,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "my_configs = {'coupler_nml':{'days':10}, 'fv_core_nml':{'npx':193, 'npy':193, 'npz':50}}\n",
-    "my_nml = ABS.make_NML(nml_template='input_yoder_v101.nml', nml_configs=[my_configs])\n",
+    "#work_dir = \n",
+    "ABS = AM4_batch_scripter(input_data_path='/Users/myoder96/Codes/AM4_data2/AM4_run', \n",
+    "                         work_dir='/Users/myoder96/Codes/AM4_runtime/workdir2', job_name='AM4_dev')\n",
+    "#\n",
+    "print('*** ABS variables:')\n",
+    "for key,val in ABS.__dict__.items():\n",
+    "    print('{}: {}'.format(key,val))\n",
+    "#\n",
+    "\n",
+    "zz = ABS.get_input_data(verbose=True)\n",
+    "\n",
+    "\n",
+    "my_configs = {'coupler_nml':{'days':10, 'months':0}, 'fv_core_nml':{'npx':193, 'npy':193, 'npz':50}}\n",
+    "my_nml = ABS.make_NML(nml_template='input_yoder_v101.nml', nml_configs=[my_configs],\n",
+    "                      nml_out=os.path.join(ABS.work_dir, 'input.nml') )\n",
     "# NML_from_nml('input_yoder_v101.nml')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 260,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "**  {'layout': '2,4', 'io_layout': '1,4', 'npx': 193, 'npy': 193, 'ntiles': '6,', 'npz': 50, 'k_split': '1,', 'n_split': '12,', 'a2b_ord': '4,', 'adjust_dry_mass': '.true.,', 'adj_mass_vmr': '.true.,', 'print_freq': '0,', 'grid_type': '0,', 'tau': '0.', 'do_uni_zfull': '.true.', 'n_sponge': '0', 'd2_bg_k1': '0.16', 'd2_bg_k2': '0.02', 'kord_tm': '-10', 'kord_mt': '10', 'kord_tr': '10', 'hydrostatic': '.T.', 'd_ext': '0.', 'd2_bg': '0.', 'nord': '2', 'dddmp': '0.', 'd4_bg': '0.15', 'vtdm4': '0.0', 'do_vort_damp': '.F.', 'd_con': '0.', 'hord_mt': '10', 'hord_vt': '10', 'hord_tm': '10', 'hord_dp': '10', 'hord_tr': '8', 'consv_te': '0.7', 'consv_am': '.T.', 'fill': '.T.', 'z_tracer': '.T.'}\n"
+      "** my_nml[fv_core_nml]:\n",
+      "**  {'layout': '2,4', 'io_layout': '1,4', 'npx': 193, 'npy': 193, 'ntiles': '6,', 'npz': 50, 'k_split': '1,', 'n_split': '12,', 'a2b_ord': '4,', 'adjust_dry_mass': '.true.,', 'adj_mass_vmr': '.true.,', 'print_freq': '0,', 'grid_type': '0,', 'tau': '0.', 'do_uni_zfull': '.true.', 'n_sponge': '0', 'd2_bg_k1': '0.16', 'd2_bg_k2': '0.02', 'kord_tm': '-10', 'kord_mt': '10', 'kord_tr': '10', 'hydrostatic': '.T.', 'd_ext': '0.', 'd2_bg': '0.', 'nord': '2', 'dddmp': '0.', 'd4_bg': '0.15', 'vtdm4': '0.0', 'do_vort_damp': '.F.', 'd_con': '0.', 'hord_mt': '10', 'hord_vt': '10', 'hord_tm': '10', 'hord_dp': '10', 'hord_tr': '8', 'consv_te': '0.7', 'consv_am': '.T.', 'fill': '.T.', 'z_tracer': '.T.'}\n",
+      "** batch_out:  am4_batch.sh\n"
      ]
     }
    ],
    "source": [
     "#my_nml = NML_from_nml('input_yoder_v101.nml')\n",
-    "\n",
+    "print('** my_nml[fv_core_nml]:' )\n",
     "print('** ', my_nml['fv_core_nml'])\n",
-    "#print(my_nml.keys())"
+    "#print(my_nml.keys())\n",
+    "\n",
+    "print('** batch_out: ', ABS.batch_out)\n",
+    "#\n",
+    "ABS.write_batch_script()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 240,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'exec': 'mpirun', 'ntasks': '--np ', 'cpu_per_task': '-d '}\n",
+      "MPI_COMMAND=mpirun --np 48 -d 1 ${EXECUTABLE\\}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(ABS.mpi_exec)\n",
+    "\n",
+    "print('MPI_COMMAND={} {}{} {}{} ${{EXECUTABLE\\}}'.format(ABS.mpi_exec['exec'],\n",
+    "                                                            ABS.mpi_exec['ntasks'], ABS.n_tasks,\n",
+    "                                                            ABS.mpi_exec['cpu_per_task'], ABS.n_threads))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 241,
    "metadata": {},
    "outputs": [
     {
