--- a/pyAM4.ipynb
+++ b/pyAM4.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -22,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +39,8 @@
     "#\n",
     "import json\n",
     "import netCDF4\n",
-    "#"
+    "#\n",
+    "import AM4py"
    ]
   },
   {
@@ -60,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,38 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "** \n",
-      "/Users/myoder96/Codes/AM4_runtime\n",
-      "/Users/myoder96/Codes\n",
-      "/Users/myoder96\n"
-     ]
-    }
-   ],
-   "source": [
-    "cwd = os.getcwd()\n",
-    "root_dir = os.path.dirname(os.path.abspath(cwd))\n",
-    "ROOT_DIR = os.path.dirname(os.path.abspath(\"..\"))\n",
-    "#\n",
-    "print('** \\n{}\\n{}\\n{}'.format(cwd, root_dir, ROOT_DIR))"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 257,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -696,24 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "a string with SOME in {$braces}\n"
-     ]
-    }
-   ],
-   "source": [
-    "print('a string with {} in {{$braces}}'.format('SOME'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -746,14 +690,14 @@
       "layout_io_1: [1 4]\n",
       "layout_2: [2 4]\n",
       "layout_io_2: [1 4]\n",
-      "self: <__main__.AM4_batch_scripter object at 0x7fae22014a20>\n",
+      "self: <AM4py.AM4_batch_scripter object at 0x7fc4d7758c50>\n",
       "*** DEBUG: os.path.isdir(os.path.join(work_dir, 'INPUT'))=True\n"
      ]
     }
    ],
    "source": [
     "#work_dir = \n",
-    "ABS = AM4_batch_scripter(input_data_path='/Users/myoder96/Codes/AM4_data2/AM4_run', \n",
+    "ABS = AM4py.AM4_batch_scripter(input_data_path='/Users/myoder96/Codes/AM4_data2/AM4_run', \n",
     "                         work_dir='/Users/myoder96/Codes/AM4_runtime/workdir2', job_name='AM4_dev')\n",
     "#\n",
     "print('*** ABS variables:')\n",
@@ -772,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -798,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -820,37 +764,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "** sp_output: \n",
-      " CompletedProcess(args=['ls', '-lh', '/Users/myoder96/Codes/AM4_data2/AM4_run/'], returncode=0, stdout=b'total 352\\ndrwxr-xr-x  502 myoder96  staff    16K Jul 14  2017 INPUT\\ndrwxr-xr-x    2 myoder96  staff    64B Jul 17  2017 RESTART\\n-rw-r--r--    1 myoder96  staff   283B Jul 14  2017 data_table\\n-rw-r--r--    1 myoder96  staff    45K Jul 14  2017 diag_table\\n-rw-r--r--    1 myoder96  staff    11K Jul 14  2017 field_table\\n-rw-r--r--    1 myoder96  staff    55K Jul 14  2017 input.nml\\n-rw-r--r--    1 myoder96  staff    55K Jul 14  2017 input.nml.unexpanded\\n')\n",
-      "** ** stdout: \n",
-      " total 352\n",
-      "drwxr-xr-x  502 myoder96  staff    16K Jul 14  2017 INPUT\n",
-      "drwxr-xr-x    2 myoder96  staff    64B Jul 17  2017 RESTART\n",
-      "-rw-r--r--    1 myoder96  staff   283B Jul 14  2017 data_table\n",
-      "-rw-r--r--    1 myoder96  staff    45K Jul 14  2017 diag_table\n",
-      "-rw-r--r--    1 myoder96  staff    11K Jul 14  2017 field_table\n",
-      "-rw-r--r--    1 myoder96  staff    55K Jul 14  2017 input.nml\n",
-      "-rw-r--r--    1 myoder96  staff    55K Jul 14  2017 input.nml.unexpanded\n",
-      "\n",
-      "**  total 352\n",
-      "**  drwxr-xr-x  502 myoder96  staff    16K Jul 14  2017 INPUT\n",
-      "**  drwxr-xr-x    2 myoder96  staff    64B Jul 17  2017 RESTART\n",
-      "**  -rw-r--r--    1 myoder96  staff   283B Jul 14  2017 data_table\n",
-      "**  -rw-r--r--    1 myoder96  staff    45K Jul 14  2017 diag_table\n",
-      "**  -rw-r--r--    1 myoder96  staff    11K Jul 14  2017 field_table\n",
-      "**  -rw-r--r--    1 myoder96  staff    55K Jul 14  2017 input.nml\n",
-      "**  -rw-r--r--    1 myoder96  staff    55K Jul 14  2017 input.nml.unexpanded\n",
-      "**  \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# simplified syntax to capture both stdout and stderr (to separate outputs?). NOTE: this syntax has been\n",
     "#. a moving target\n",
@@ -870,24 +786,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "*** coupler_nml:{'months': '1,', 'days': '0,', 'current_date': '1979,1,1,0,0,0,', 'calendar': \"'julian'\", 'dt_atmos': '1800,', 'dt_cpld': '7200,', 'use_lag_fluxes': '.true.', 'concurrent': '.false.', 'do_ocean': '.false.', 'ocean_npes': '0', 'atmos_npes': '48', 'atmos_nthreads': '1', 'use_hyper_thread': '.false.', 'ncores_per_node': '24'}\n",
-      "\n",
-      "*** coupler_nml:{'months': '1,', 'days': '0,', 'current_date': '1979,1,1,0,0,0,', 'calendar': \"'julian'\", 'dt_atmos': '1800,', 'dt_cpld': '7200,', 'use_lag_fluxes': '.true.', 'concurrent': '.false.', 'do_ocean': '.false.', 'ocean_npes': '0', 'atmos_npes': '48', 'atmos_nthreads': '1', 'use_hyper_thread': '.false.', 'ncores_per_node': '24'}\n",
-      "\n",
-      "*** vegn_data_nml:{'vegn_to_use': \"'uniform'\", 'K1': '10,', 'K2': '0.1,', 'fsc_liv': '0.9,', 'fsc_wood': '0.45,', 'c1(4)': '0.3', 'c2(4)': '0.3', 'Vmax': '2.0E-5, 2.0E-5, 2.0E-5, 2.0E-5, 1.50E-5,', 'm_cond': '4., 9., 9., 7., 7.,', 'alpha_phot': '0.05, 0.06, 0.06, 0.06, 0.06,', 'gamma_resp': '0.03, 0.02, 0.02, 0.02, 0.02,', 'tc_crit(0:2)': '3*273.16', 'fact_crit_phen(0:4)': '0., 0., 0., 0., 0.', 'fact_crit_fire(0:4)': '0., 0., 0., 0., 0.', 'cnst_crit_phen(0:4)': '0.30, 0.15, 0.15, 0.30, 0.30', 'cnst_crit_fire(0:4)': '0.15,  0.40, 0.15, 0.15, 0.15', 'wet_leaf_dreg(0:4)': '.3, .3, .3, .3, .3', 'ksi': '0, 0, 0, 0, 0,', 'leaf_refl(0:4,1)': '0.11, 0.11, 0.10, 0.10, 0.10', 'leaf_refl(0:4,2)': '0.58, 0.58, 0.45, 0.45, 0.39,', 'dat_root_zeta(0:4)': '0.35212, 0.17039, 0.28909, 0.25813, 0.17039', 'critical_root_density': '0.0,', 'tau_drip_s': '259200.0', 'cmc_lai(0:4)': '0.02, 0.02, 0.02, 0.02, 0.02', 'csc_lai(0:4)': '0.30, 0.30, 0.30, 0.30, 0.60', 'dat_snow_crit': '4*1.e7, .1', 't_transp_min': '268.', 'srl(0:1)': '112.0e3, 150.0e3', 'root_perm': '14*5e-7', 'alpha(1,3)': '4', 'leaf_age_tau(2)': '150', 'smoke_fraction': '0.9, 0.9, 0.6, 0.6, 0.6', 'tg_c3_thresh': '1', 'phen_ev1': '0.2', 'phen_ev2': '0.7', 'cmc_eps': '0.01', 'alpha(0:4,6)': '0.0, 0.0, 0.012, 0.012, 0.012', 'treefall_disturbance_rate': '0.175, 0.185, 0.025, 0.0275, 0.027'}\n",
-      "\n",
-      "*** simple_sulfate_nml:{'gas_conc_filename': \"'gas_conc_3D_am3p9.nc'\", 'gas_conc_time_dependency_type': \"'constant'\", 'cont_volc_source': \"'do_cont_volc'\", 'expl_volc_source': \"'do_expl_volc'\", 'aerocom_emission_filename': \"'so2_0.25_volcanoes.nc'\", 'aircraft_source': \"'do_aircraft',\", 'aircraft_filename': \"'emissions.aircraft.aero.0.5x0.5.1849-2016.nc',\", 'aircraft_emission_name(1)': \"'fuel'\", 'aircraft_time_dependency_type': \"'time_varying'\", 'aircraft_dataset_entry': '1979 1 1 0 0 0', 'so2_aircraft_EI': '0.001', 'anthro_source': \"'do_anthro',\", 'anthro_emission_name(1)': \"'so2ff',\", 'anthro_emission_name(2)': \"'so4ff',\", 'anthro_time_dependency_type': \"'time_varying'\", 'anthro_dataset_entry': '1979 1 1 0 0 0', 'anthro_filename': \"'anthro_so2.1849_2016.nc',\", 'biobur_source': \"'do_biobur',\", 'biobur_emission_name(1)': \"'so2bb',\", 'biobur_emission_name(2)': \"'so4bb',\", 'biobur_time_dependency_type': \"'time_varying'\", 'biobur_dataset_entry': '1979 1 1 0 0 0', 'biobur_filename': \"'anthro_so2.1849_2016.nc',\", 'cloud_chem_solver': '\"f1p\"', 'pH_cloud': '4.5', 'no_biobur_if_no_pbl': '.false.'}\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "NML_test = NML_from_nml('input_yoder_v101.nml')\n",
     "#\n",
@@ -923,26 +824,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "** Layouts_1:  [[ 6  8]\n",
-      " [ 4 12]\n",
-      " [ 3 16]\n",
-      " [ 2 24]\n",
-      " [ 1 48]]\n",
-      "** Layouts_2:  [[2 4]\n",
-      " [1 8]]\n",
-      "** Layouts_io_1:  [[1 4]\n",
-      " [1 8]]\n",
-      "** Layouts_io_2:  [[1 4]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "        \n",
     "n_tasks = 48\n",
@@ -965,54 +849,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "***  dict_keys([])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print('*** ', my_nml.keys())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "** Layouts_1:  [[ 6  8]\n",
-      " [ 4 12]\n",
-      " [ 3 16]\n",
-      " [ 2 24]\n",
-      " [ 1 48]]\n",
-      "** Layouts_2:  [[2 4]\n",
-      " [1 8]]\n",
-      "** Layouts_io_1:  [[1 4]\n",
-      " [1 8]]\n",
-      "** Layouts_io_2:  [[1 4]]\n"
-     ]
-    },
-    {
-     "ename": "KeyError",
-     "evalue": "'fv_core_nml'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-133-2838194df9f0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     25\u001b[0m \u001b[0;31m# print out layouts, as they are imported:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     26\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mgrp\u001b[0m \u001b[0;32min\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;34m'fv_core_nml'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'land_model_nml'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'ocean_model_nml'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'ice_model_nml'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 27\u001b[0;31m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'** {}::layout: {}'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgrp\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmy_nml\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mgrp\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'layout'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     28\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'** {}::io_layout: {}'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgrp\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmy_nml\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mgrp\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'layout'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     29\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'\\n'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'fv_core_nml'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "layout_1=layouts_1[0]\n",
     "layout_2=layouts_2[0]\n",
