adding am4_sample_run.py, a sample script. a few minor modifications in AM4py.py to the default naming of the constructed batch file.

--- a/pyAM4.ipynb
+++ b/pyAM4.ipynb
@@ -44,18 +44,41 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### AM4 runtime scripting: Development, examples, and templates\n",
+    "\n",
+    "This notebook contains development work, examples, and templates to script AM4 simulations in Python. The basic strategy is to write a Python script to manage preliminary setup tasks, ie setting up working directories, copying data, assessing the restart status, and then (possibly) submit a simple batch script to run the large MPI job.\n",
+    "\n",
+    "Tasks delegated to the Python parent script include:\n",
+    "\n",
+    "- Do we have a working directory? Does it contain an INPUT folder?\n",
+    "- If not, copy INPUT data from a designated source (which can take a long, long time).\n",
+    "- Configure the batch scritp and `.nml` configuration to:\n",
+    "    - Use the correct `layout` formats\n",
+    "    - Request the correct number of processors\n",
+    "    - Make any configuratioon changes, from a base template\n",
+    "    - Other stuff too...\n",
+    "- Manage restarts\n",
+    "\n",
+    "The advantages of this approach are:\n",
+    "\n",
+    "1. Python is generally considered a more versatile and easy to use scripting language than any shell language.\n",
+    "2. To that point, most of these projects still come with `csh` or `tcsh` scripts, which are often simply not supported by newer OSs, including RedHat 7.x (it might be nominally available, but 1) might not be supported by admins (ie, LMOD will not work), and 2) it can in many cases just plain not run correctly. Accordingly, it is often necessary to translate any standard or provided scripts to `bash` anyway. We hope that, with these tools as a starting place, it will be easier to skip straight to Python.\n",
+    "3. Shell scripting often does not directly support very simple logic, that can be very helpful when managing large, complex runs -- particularly with checkpointing. For example, floating point math is not directly supported in `bash`.\n",
+    "4. Some preliminary operations, for example acquiring or copying input data, can be extremely cumbersome (it's a lot of data!); this approach allows these steps to be accomplished by a single-process setup script before the large MPI job is submitted. This will help to maintain friendships with your colleagues and sysadmins.\n",
+    "5. Permits flexibility, more complex scripts, for example running in small checkpointed steps, to better utilize shared resources, and (possibly) saving the incremental output.\n",
+    "\n"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
    "source": [
+    "# Original code:\n",
+    "# This code has been moved to AM4py.py, but it may be convenient to keep a copy here for reference.\n",
+    "\n",
     "class NML(dict):\n",
     "    #\n",
     "    def __init__(self):\n",
@@ -238,15 +261,8 @@
     "        if not output is None:\n",
     "            self.nml = self.json_to_nml(self.nml_json, output)\n",
     "\n",
-    "            "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "            \n",
+    "\n",
     "class AM4_batch_scripter(object):\n",
     "    mpi_execs = {'mpirun':{'exec': 'mpirun', 'ntasks':'--np ', 'cpu_per_task':'-d '},\n",
     "                 'srun':{'exec':'srun', 'ntasks':'--ntasks=', 'cpu_per_task':'--cpus-per-task='}}\n",
@@ -656,49 +672,62 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### AM4py Example\n",
+    "\n",
+    "- OPTIONAL:\n",
+    "    - Define big-picture (ie, multiple runs) job\n",
+    "    - Evaluate `work_dir` data to determine next actions (ie, did the previous job run, are we finished, etc.)\n",
+    "- Instantiate an `AM4_batch_scripter` object\n",
+    "    - It will evaluate whether the input data exist; if not, it will go get it.\n",
+    "- Modify the NML configuration and export a working NML\n",
+    "- Write a batch file to run AM4\n",
+    "- Submit that script\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "*** ABS variables:\n",
-      "batch_out: am4_batch.sh\n",
-      "work_dir: /Users/myoder96/Codes/AM4_runtime/workdir2\n",
-      "mpi_exec: {'exec': 'mpirun', 'ntasks': '--np ', 'cpu_per_task': '-d '}\n",
-      "input_data_path: /Users/myoder96/Codes/AM4_data2/AM4_run\n",
-      "input_data_tar: /Users/myoder96/Codes/AM4_data2/AM4_run.tar.gz\n",
-      "input_data_url: ftp://nomads.gfdl.noaa.gov/users/Ming.Zhao/AM4Documentation/GFDL-AM4.0/inputData/AM4_run.tar.gz\n",
-      "nml_template: nml_input_template.nml\n",
-      "modules: ['intel/19', 'openmpi_3/', 'gfdl_am4/']\n",
-      "diag_table_src: diag_table_v101\n",
-      "force_copy_input: 0\n",
-      "do_tar: 0\n",
-      "hpc_config: {'cpu_per_node': 24, 'cpu_slots': 2, 'cpu_make': 'intel', 'cpu_gen': 'haswell', 'mem_per_node': 64, 'modules': ['intel/19', 'openmpi_3/', 'gfdl_am4/']}\n",
-      "npes_atmos: 48\n",
-      "nthreads_atmos: 1\n",
-      "npes_ocean: 0\n",
-      "job_name: AM4_dev\n",
-      "sbatch_options_str: \n",
-      "copy_timeout: 6000\n",
-      "cwd: /Users/myoder96/Codes/AM4_runtime\n",
-      "root_path: /Users/myoder96/Codes\n",
-      "default_data_path: /Users/myoder96/Codes/AM4_data/AM4_run\n",
-      "layout_1: [6 8]\n",
-      "layout_io_1: [1 4]\n",
-      "layout_2: [2 4]\n",
-      "layout_io_2: [1 4]\n",
-      "self: <AM4py.AM4_batch_scripter object at 0x7fc4d7758c50>\n",
-      "*** DEBUG: os.path.isdir(os.path.join(work_dir, 'INPUT'))=True\n"
+      "/Users/myoder96\n"
      ]
     }
    ],
    "source": [
-    "#work_dir = \n",
-    "ABS = AM4py.AM4_batch_scripter(input_data_path='/Users/myoder96/Codes/AM4_data2/AM4_run', \n",
-    "                         work_dir='/Users/myoder96/Codes/AM4_runtime/workdir2', job_name='AM4_dev')\n",
+    "print(os.environ['HOME'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*** input_data_path:  /Users/myoder96/Codes/AM4_data2/AM4_run\n"
+     ]
+    }
+   ],
+   "source": [
+    "#\n",
+    "input_data_path = os.path.join(os.environ['HOME'], 'Codes', 'AM4_data2', 'AM4_run')\n",
+    "work_dir = os.path.join(os.environ['HOME'], 'Codes', 'AM4_runtime', 'workdir2')\n",
+    "job_name = 'AM4_dev'\n",
+    "batch_job_name = os.path.join(work_dir, 'AM4_batch_example.bs')\n",
+    "#\n",
+    "#print('*** input_data_path: ', input_data_path)\n",
+    "#\n",
+    "ABS = AM4py.AM4_batch_scripter(input_data_path=imput_data_path, work_dir=work_dir,\n",
+    "                               job_name='AM4_dev', batch_out=batch_job_name )\n",
     "#\n",
     "print('*** ABS variables:')\n",
     "for key,val in ABS.__dict__.items():\n",
@@ -711,25 +740,8 @@
     "my_configs = {'coupler_nml':{'days':10, 'months':0}, 'fv_core_nml':{'npx':193, 'npy':193, 'npz':50}}\n",
     "my_nml = ABS.make_NML(nml_template='input_yoder_v101.nml', nml_configs=[my_configs],\n",
     "                      nml_out=os.path.join(ABS.work_dir, 'input.nml') )\n",
-    "# NML_from_nml('input_yoder_v101.nml')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "** my_nml[fv_core_nml]:\n",
-      "**  {'layout': '2,4', 'io_layout': '1,4', 'npx': 193, 'npy': 193, 'ntiles': '6,', 'npz': 50, 'k_split': '1,', 'n_split': '12,', 'a2b_ord': '4,', 'adjust_dry_mass': '.true.,', 'adj_mass_vmr': '.true.,', 'print_freq': '0,', 'grid_type': '0,', 'tau': '0.', 'do_uni_zfull': '.true.', 'n_sponge': '0', 'd2_bg_k1': '0.16', 'd2_bg_k2': '0.02', 'kord_tm': '-10', 'kord_mt': '10', 'kord_tr': '10', 'hydrostatic': '.T.', 'd_ext': '0.', 'd2_bg': '0.', 'nord': '2', 'dddmp': '0.', 'd4_bg': '0.15', 'vtdm4': '0.0', 'do_vort_damp': '.F.', 'd_con': '0.', 'hord_mt': '10', 'hord_vt': '10', 'hord_tm': '10', 'hord_dp': '10', 'hord_tr': '8', 'consv_te': '0.7', 'consv_am': '.T.', 'fill': '.T.', 'z_tracer': '.T.'}\n",
-      "** batch_out:  am4_batch.sh\n"
-     ]
-    }
-   ],
-   "source": [
+    "# NML_from_nml('input_yoder_v101.nml')\n",
+    "\n",
     "#my_nml = NML_from_nml('input_yoder_v101.nml')\n",
     "print('** my_nml[fv_core_nml]:' )\n",
     "print('** ', my_nml['fv_core_nml'])\n",
@@ -738,6 +750,23 @@
     "print('** batch_out: ', ABS.batch_out)\n",
     "#\n",
     "ABS.write_batch_script()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "**  am4_batch.sh\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('** ', ABS.batch_out)"
    ]
   },
   {
