--- a/pyAM4.ipynb
+++ b/pyAM4.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -13,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -689,44 +698,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/myoder96\n"
+      "/Users/myoder96\n",
+      "**  b'UIT-C02YT0LBLVDP.local\\n'\n"
      ]
     }
    ],
    "source": [
-    "print(os.environ['HOME'])"
+    "print(os.environ['HOME'])\n",
+    "xx=subprocess.run('hostname', capture_output=True)\n",
+    "print('** ', xx.stdout)\n",
+    "\n",
+    "#print('** ', xx.content)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "*** input_data_path:  /Users/myoder96/Codes/AM4_data2/AM4_run\n"
+      "*** ABS variables:\n",
+      "batch_out: /Users/myoder96/Codes/AM4_runtime/workdir_empty/AM4_batch_example.bs\n",
+      "work_dir: /Users/myoder96/Codes/AM4_runtime/workdir_empty\n",
+      "mpi_exec: {'exec': 'mpirun', 'ntasks': '--np ', 'cpu_per_task': '-d '}\n",
+      "input_data_path: /Users/myoder96/Codes/AM4_data2/AM4_run\n",
+      "input_data_tar: /Users/myoder96/Codes/AM4_data2/AM4_run.tar.gz\n",
+      "input_data_url: ftp://nomads.gfdl.noaa.gov/users/Ming.Zhao/AM4Documentation/GFDL-AM4.0/inputData/AM4_run.tar.gz\n",
+      "nml_template: nml_input_template.nml\n",
+      "modules: ['intel/19', 'openmpi_3/', 'gfdl_am4/']\n",
+      "diag_table_src: diag_table_v101\n",
+      "force_copy_input: 0\n",
+      "do_tar: 0\n",
+      "hpc_config: {'cpus_per_node': 24, 'cpu_slots': 2, 'cpu_make': 'intel', 'cpu_gen': 'haswell', 'mem_per_node': 64, 'modules': ['intel/19', 'openmpi_3/', 'gfdl_am4/']}\n",
+      "npes_atmos: 48\n",
+      "nthreads_atmos: 1\n",
+      "npes_ocean: 0\n",
+      "job_name: AM4_dev\n",
+      "sbatch_options_str: \n",
+      "copy_timeout: 6000\n",
+      "cwd: /Users/myoder96/Codes/AM4_runtime\n",
+      "root_path: /Users/myoder96/Codes\n",
+      "default_data_path: /Users/myoder96/Codes/AM4_data/AM4_run\n",
+      "layout_1: [6 8]\n",
+      "layout_io_1: [1 4]\n",
+      "layout_2: [2 4]\n",
+      "layout_io_2: [1 4]\n",
+      "self: <AM4py.AM4_batch_scripter object at 0x7fcff26bdf60>\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'AM4_batch_scripter' object has no attribute 'get_empty_work_dir'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-31-7d6b12d17a24>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[0;31m#zz = ABS.get_input_data(verbose=True)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 18\u001b[0;31m \u001b[0mzz\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mABS\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_empty_work_dir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mverbose\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     19\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'AM4_batch_scripter' object has no attribute 'get_empty_work_dir'"
      ]
     }
    ],
    "source": [
     "#\n",
     "input_data_path = os.path.join(os.environ['HOME'], 'Codes', 'AM4_data2', 'AM4_run')\n",
-    "work_dir = os.path.join(os.environ['HOME'], 'Codes', 'AM4_runtime', 'workdir2')\n",
+    "work_dir = os.path.join(os.environ['HOME'], 'Codes', 'AM4_runtime', 'workdir_empty')\n",
     "job_name = 'AM4_dev'\n",
     "batch_job_name = os.path.join(work_dir, 'AM4_batch_example.bs')\n",
     "#\n",
     "#print('*** input_data_path: ', input_data_path)\n",
     "#\n",
-    "ABS = AM4py.AM4_batch_scripter(input_data_path=imput_data_path, work_dir=work_dir,\n",
+    "ABS = AM4py.AM4_batch_scripter(input_data_path=input_data_path, work_dir=work_dir,\n",
     "                               job_name='AM4_dev', batch_out=batch_job_name )\n",
     "#\n",
     "print('*** ABS variables:')\n",
@@ -734,7 +785,8 @@
     "    print('{}: {}'.format(key,val))\n",
     "#\n",
     "\n",
-    "zz = ABS.get_input_data(verbose=True)\n",
+    "#zz = ABS.get_input_data(verbose=True)\n",
+    "zz = ABS.get_empty_work_dir(verbose=True)\n",
     "\n",
     "\n",
     "my_configs = {'coupler_nml':{'days':10, 'months':0}, 'fv_core_nml':{'npx':193, 'npy':193, 'npz':50}}\n",
@@ -754,19 +806,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "**  am4_batch.sh\n"
+      "**  am4_batch.sh\n",
+      "***  ['abcd', 'efg\\n'] **\n"
      ]
     }
    ],
    "source": [
-    "print('** ', ABS.batch_out)"
+    "print('** ', ABS.batch_out)\n",
+    "print('*** ', 'abcd=efg\\n'.split('='), '**')"
    ]
   },
   {
