synching up with remote...

--- a/pyAM4_dev.ipynb
+++ b/pyAM4_dev.ipynb
@@ -1206,7 +1206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -1266,6 +1266,8 @@
     "fn = 'tracerIC.19800101.v2.nc'\n",
     "fin_name=os.path.join(os.environ['HOME'], 'Codes', 'AM4_runtime', \n",
     "                      'workdir2', 'INPUT', fn)\n",
+    "# fin_name=os.path.join(os.environ['SCRATCH'], 'AM4', \n",
+    "#                       'workdir3', 'INPUT', fn)\n",
     "#\n",
     "with netCDF4.Dataset(fin_name, 'r') as fin:\n",
     "    print('** dimensions: ', fin.dimensions)\n",
